--- a/views/form.ejs
+++ b/views/form.ejs
@@ -110,7 +110,7 @@
     <button type="submit">💾 Simpan</button>
   </form>
 
-  <a href="/crud">⬅️ Kembali ke Daftar Prompt</a>
+  <a href="/context">⬅️ Kembali ke Daftar Prompt</a>
 
 </body>
 </html>
